add libxmlrpc stuff for subboss

--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -238,6 +238,7 @@ endif
 	@$(MAKE) -C tmcd subboss-install
 	@$(MAKE) -C rc.d subboss-install
 	@$(MAKE) -C dhcpd subboss-install
+	@$(MAKE) -C tbsetup client-install
 	# Hack: this should probably be done by a subboss-install
 	# script, but there isn't a huge need for that yet
 	@rm -f $(INSTALL_RCDIR)/isc-dhcpd
