--- a/www/dbdefs.php3.in
+++ b/www/dbdefs.php3.in
@@ -578,7 +578,7 @@ function TBGetVersionInfo(&$major, &$minor, &$build)
 	DBQuery("select value from version_info where name='dbrev'");
     if ($query_result && mysql_num_rows($query_result)) {
 	$row = mysql_fetch_row($query_result);
-	list($a,$b) = split('\.', $row[0]);
+	list($a,$b) = preg_split('/\./', $row[0]);
 	$a = (isset($a) && $a != "" ? $a : "x");
 	$b = (isset($b) && $b != "" ? $b : "y");
 	$major = $a;
