Bug fix: make sure we pass back the value we actually care about in vlansv2!

--- a/xmlrpc/emulabserver.py.in
+++ b/xmlrpc/emulabserver.py.in
@@ -4971,7 +4971,7 @@ class elabinelab:
             stuff += l
             pass
         
-        return EmulabResponse(RESPONSE_SUCCESS, output=output)
+        return EmulabResponse(RESPONSE_SUCCESS, value=stuff, output=output)
     #
     # Fire up a frisbeed for an image,
     # 
