--- a/rc.d/GNUmakefile.in
+++ b/rc.d/GNUmakefile.in
@@ -1,6 +1,6 @@
 #
 # EMULAB-COPYRIGHT
-# Copyright (c) 2000-2009 University of Utah and the Flux Group.
+# Copyright (c) 2000-2010 University of Utah and the Flux Group.
 # All rights reserved.
 #
 # For installation.
@@ -64,6 +64,13 @@ $(INSTALL_RCDIR)/capture: capture.sh
 	-mkdir -p $(INSTALL_RCDIR)
 	$(INSTALL_PROGRAM) capture.sh $@
 
+#
+# Well, this is awkward.  Make sure we don't try to install anything from
+# a dev tree both because it doesn't make any sense and because it would
+# clobber the "real" version.
+#
+ifeq ($(TBROOT),/usr/testbed)
+
 install: $(addprefix $(INSTALL_RCDIR)/, $(RC_SCRIPTS))
 
 control-install:	$(addprefix $(INSTALL_RCDIR)/, $(OPS_SCRIPTS))
@@ -74,3 +81,7 @@ clrhouse-install:	$(INSTALL_RCDIR)/2.mysql-server.sh \
 			$(INSTALL_RCDIR)/1.mysql-client.sh
 
 tipserv-install:	$(addprefix $(INSTALL_RCDIR)/, $(TIP_SCRIPTS))
+else
+install control-install subboss-install clrhouse-install tipserv-install:
+	@echo "Cannot install startup scripts in dev tree"
+endif
