--- a/tbsetup/tbswap.in
+++ b/tbsetup/tbswap.in
@@ -198,7 +198,7 @@ if (!defined($experiment)) {
     tbdie("Could not lookup experiment object!")
 }
 my $special = ($pid eq "testbed" || $pid eq "tbres" || $pid eq "geni" ||
-	       $pid eq "emulab-ops" || $pid eq "utahstud");
+	       $pid eq "emulab-ops" || $pid eq "utahstud" || $pid eq "ResiliNets");
 my $newsetup = $special;
 
 #
