--- a/os/imagezip/Makefile-linux.sa
+++ b/os/imagezip/Makefile-linux.sa
@@ -1,12 +1,12 @@
 #
 # EMULAB-COPYRIGHT
-# Copyright (c) 2000-2005 University of Utah and the Flux Group.
+# Copyright (c) 2000-2010 University of Utah and the Flux Group.
 # All rights reserved.
 #
 
 # 
 # Makefile for the standalone version of imagezip/unzip.
-# (Standalone meaning not part of the Netbed build environment.)
+# (Standalone meaning not part of the Emulab build environment.)
 #
 BINDIR=	/usr/local/bin
 
@@ -31,27 +31,27 @@ LIBS 		= -lz $(PTHREADLIBS)
 UNZIPCFLAGS	= $(CFLAGS) -Wall
 UNZIPLIBS	= $(LIBS)
 
-ifeq ($(WITH_EXTFS), 1)
+ifeq ($(WITH_EXTFS),1)
 FSOBJS		+= extfs/extfs.o extfs/reloc_lilo.o
 CFLAGS		+= -DWITH_EXTFS -Iextfs
 endif
 
-ifeq ($(WITH_EXT4FS), 1)
+ifeq ($(WITH_EXT4FS),1)
 FSOBJS		+= ext4fs/ext4fs.o ext4fs/reloc_lilo.o
 CFLAGS		+= -DWITH_EXT4FS -Iext4fs
 endif
 
-ifeq ($(WITH_FFS), 1)
+ifeq ($(WITH_FFS),1)
 FSOBJS		+= ffs/ffs.o
 CFLAGS		+= -DWITH_FFS -Iffs
 endif
 
-ifeq ($(WITH_FAT), 1)
+ifeq ($(WITH_FAT),1)
 FSOBJS		+= fat/fat_fat.o fat/fat_boot.o fat/fat_glue.o
 CFLAGS		+= -DWITH_FAT -Ifat
 endif
 
-ifeq ($(WITH_NTFS), 1)
+ifeq ($(WITH_NTFS),1)
 FSOBJS		+= ntfs/ntfs_glue.o
 FSLIBS		+= ntfs/libntfs/libntfs.a
 CFLAGS		+= -DWITH_NTFS -DOLD_LIBNTFS -Intfs/libntfs/ntfsprogs-1.7.1.linux/include
@@ -66,7 +66,7 @@ imageunzip: imageunzip.o crc.o version.o disksize.o
 	$(CC) $(CFLAGS) $^ $(UNZIPLIBS) -o imageunzip
 
 imageunzip.o: imageunzip.c
-	$(CC) $(UNZIPCFLAGS) -o $@ -c $<
+	$(CC) -c $(UNZIPCFLAGS) -o $@ $<
 
 imagedump: imagedump.o version.o
 	$(CC) $(CFLAGS) $^ $(LIBS) -o imagedump
