--- a/xmlrpc/emulabserver.py.in
+++ b/xmlrpc/emulabserver.py.in
@@ -4972,7 +4972,7 @@ class elabinelab:
             stuff += l
             pass
         
-        return EmulabResponse(RESPONSE_SUCCESS, output=output)
+        return EmulabResponse(RESPONSE_SUCCESS, value=stuff, output=output)
     #
     # Fire up a frisbeed for an image,
     # 
