enable frisbee encryption in the linux MFS

--- a/os/imagezip/Makefile-linux.sa
+++ b/os/imagezip/Makefile-linux.sa
@@ -10,6 +10,9 @@
 #
 BINDIR=	/usr/local/bin
 
+# Set to 1 for "secure frisbee" support.  Requires openssl libraries.
+WITH_CRYPTO	= 1
+
 #
 # Which filesystems to support
 #
@@ -17,6 +20,7 @@ WITH_EXTFS	= 1
 WITH_FFS	= 1
 WITH_FAT	= 1
 WITH_NTFS	= 1
+WITH_HASH	= 0
 WITH_EXT4FS	= 0
 
 PTHREADCFLAGS	= -D_THREAD_SAFE -pthread
@@ -30,6 +34,12 @@ CFLAGS		= -Wall -O2 -g -static -I. $(PTHREADCFLAGS) $(LINUXOPTS)
 LIBS 		= -lz $(PTHREADLIBS)
 UNZIPCFLAGS	= $(CFLAGS) -Wall
 UNZIPLIBS	= $(LIBS)
+
+# Secure images
+ifeq ($(WITH_CRYPTO),1)
+CFLAGS		+= -DWITH_CRYPTO -DSIGN_CHECKSUM
+LIBS		+= -lcrypto
+endif
 
 ifeq ($(WITH_EXTFS),1)
 FSOBJS		+= extfs/extfs.o extfs/reloc_lilo.o
@@ -57,18 +67,27 @@ FSLIBS		+= ntfs/libntfs/libntfs.a
 CFLAGS		+= -DWITH_NTFS -DOLD_LIBNTFS -Intfs/libntfs/ntfsprogs-1.7.1.linux/include
 endif
 
+# with HASH
+ifeq ($(WITH_HASH),1)
+CFLAGS		+= -DWITH_HASH -DHASHSTATS
+SUBDIRCFLAGS	+= -DHASHSTATS
+SUBDIRS		+= hashmap
+ZIPLIBS		+= hashmap/libhashmap.a
+LIBS		+= -lcrypto $(PTHREADLIBS)
+endif
+
 all:	imagezip imageunzip imagedump
 
-imagezip: imagezip.o version.o $(FSOBJS) $(FSLIBS)
+imagezip: imagezip.o checksum.o version.o $(FSOBJS) $(FSLIBS)
 	$(CC) $(CFLAGS) $^ $(LIBS) -o imagezip
 
-imageunzip: imageunzip.o crc.o version.o disksize.o
+imageunzip: imageunzip.o checksum.o crc.o version.o disksize.o
 	$(CC) $(CFLAGS) $^ $(UNZIPLIBS) -o imageunzip
 
 imageunzip.o: imageunzip.c
 	$(CC) -c $(UNZIPCFLAGS) -o $@ $<
 
-imagedump: imagedump.o version.o
+imagedump: imagedump.o checksum.o version.o
 	$(CC) $(CFLAGS) $^ $(LIBS) -o imagedump
 
 version.c: imagezip.c imageunzip.c imagedump.c
