Bug fix: Increase size of passwd, group buffer
Increase the buffer size for parsing passwd and group entries to 1024
bytes from the default 256.

--- a/mfs/linux_mfs/source/toolchain/Makefile
+++ b/mfs/linux_mfs/source/toolchain/Makefile
@@ -30,6 +30,7 @@ $(BUILDROOT_PATH)/.patch-stamp: $(BUILDROOT_PATH)/.extract-stamp
 	$(SCRIPTS_PATH)/patch-kernel.sh $(BUILDROOT_PATH) $(SOURCE_PATH)/buildroot '*.patch'
 	cp $(SOURCE_PATH)/toolchain/linux*.patch $(BUILDROOT_PATH)/toolchain/kernel-headers
 	cp $(SOURCE_PATH)/toolchain/uClibc*.patch $(BUILDROOT_PATH)/toolchain/uClibc
+	cp $(SOURCE_PATH)/toolchain/uClibc*.config $(BUILDROOT_PATH)/toolchain/uClibc
 	touch $@
 
 $(BUILDROOT_PATH)/.config-stamp: $(BUILDROOT_PATH)/.patch-stamp
