--- a/tbsetup/tbswap.in
+++ b/tbsetup/tbswap.in
@@ -198,7 +198,8 @@ if (!defined($experiment)) {
     tbdie("Could not lookup experiment object!")
 }
 my $special = ($pid eq "testbed" || $pid eq "tbres" || $pid eq "geni" ||
-	       $pid eq "emulab-ops" || $pid eq "utahstud" || $pid eq "ResiliNets");
+	       $pid eq "emulab-ops" || $pid eq "utahstud" ||
+               $pid eq "ResiliNets" || $pid eq "gec8tutorial");
 my $newsetup = $special;
 
 #
