--- a/os/frisbee.redux/Makefile-linux.sa
+++ b/os/frisbee.redux/Makefile-linux.sa
@@ -26,7 +26,7 @@ LINUXOPTS	= -D_FILE_OFFSET_BITS=64 -D_GNU_SOURCE \
 
 CLIENTFLAGS	= $(CFLAGS)
 CLIENTLIBS	= -lz $(PTHREADLIBS)
-CLIENTOBJS	= client.o frisbee.o $(IMAGEZIPDIR)/checksum.o $(IMAGEZIPDIR)/disksize.o $(SHAREDOBJS)
+CLIENTOBJS	= client.o frisbee.o checksum.o disksize.o $(SHAREDOBJS)
 
 SERVERFLAGS	= $(CFLAGS)
 SERVERLIBS	= $(PTHREADLIBS)
@@ -66,7 +66,7 @@ CFLAGS		+= -DCONDVARS_WORK
 all: frisbee frisbeed
 
 frisbee: $(CLIENTOBJS)
-	$(CC) $(LDFLAGS) $(CLIENTFLAGS) $(CLIENTOBJS) $(CLIENTLIBS) -o frisbee
+	$(CC) $(LDFLAGS) $(CLIENTFLAGS) $(CLIENTOBJS) $(CLIENTLIBS) $(IUZLIBS) -o frisbee
 	cp frisbee frisbee.debug
 	strip frisbee
 
@@ -83,13 +83,14 @@ $(IMAGEZIPDIR)/imageunzip.c: $(IMAGEZIPDIR)/imagehdr.h $(IMAGEZIPDIR)/queue.h
 
 $(IMAGEZIPDIR)/disksize.c: $(IMAGEZIPDIR)/imagehdr.h $(IMAGEZIPDIR)/queue.h
 
+disksize.o:	$(IMAGEZIPDIR)/disksize.c
+	$(CC) -c $(CFLAGS) $(IUZFLAGS) -DFRISBEE -I$(IMAGEZIPDIR) -o disksize.o $<
+
 frisbee.o:	$(IMAGEZIPDIR)/imageunzip.c
-	$(CC) -c $(CFLAGS) -DFRISBEE -I$(IMAGEZIPDIR) -o frisbee.o \
-		$(IMAGEZIPDIR)/imageunzip.c
+	$(CC) -c $(CFLAGS) $(IUZFLAGS) -DFRISBEE -I$(IMAGEZIPDIR) -o frisbee.o $<
 
 checksum.o:	$(IMAGEZIPDIR)/checksum.c
-	$(CC) -c $(CFLAGS) -DFRISBEE -I$(IMAGEZIPDIR) -o checksum.o \
-		$(IMAGEZIPDIR)/checksum.c
+	$(CC) -c $(CFLAGS) $(IUZFLAGS) -DFRISBEE -I$(IMAGEZIPDIR) -o checksum.o $<
 
 client.o:	decls.h log.h utils.h trace.h
 server.o:	decls.h log.h utils.h trace.h
