Enable uClibc support for old signal functions

--- a/mfs/linux_mfs/source/toolchain/uClibc-0.9.30.config
+++ b/mfs/linux_mfs/source/toolchain/uClibc-0.9.30.config
@@ -240,3 +240,5 @@ WARNINGS="-Wall"
 # CONFIG_ARM_XSCALE is not set
 # CONFIG_ARM_IWMMXT is not set
 
+UCLIBC_HAS_OBSOLETE_BSD_SIGNAL=y
+UCLIBC_HAS_OBSOLETE_SYSV_SIGNAL=y
